fix: remove padding and overflow hidden as it cropped the search

--- a/themes/embark/source/assets/scss/04-objects/_objects.header.scss
+++ b/themes/embark/source/assets/scss/04-objects/_objects.header.scss
@@ -1,6 +1,5 @@
 .c-header {
   padding: get-spacing-inset(l) get-spacing-inset(l) get-spacing-inset(l);
-  border-radius: $border-radius;
   background-color: get-color-layout(spot);
   background-image: url(/assts/images/dummy-background.png);
   background-position: center right;
